--- a/NuGet/ServiceStack.OrmLite.MySql/servicestack.ormlite.mysql.nuspec
+++ b/NuGet/ServiceStack.OrmLite.MySql/servicestack.ormlite.mysql.nuspec
@@ -12,18 +12,14 @@
     </description> 
     <projectUrl>https://github.com/ServiceStack/ServiceStack.OrmLite</projectUrl>
     <licenseUrl>https://servicestack.net/terms</licenseUrl>
-    <requireLicenseAcceptance>true</requireLicenseAcceptance>
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <iconUrl>https://servicestack.net/img/logo-32.png</iconUrl>
     <tags>MySql OrmLite POCO Code-First Orm Schema-less Blobs</tags>
     <language>en-US</language> 
     <copyright>Copyright 2015 Service Stack</copyright>
     <dependencies>
       <dependency id="MySql.Data" version="6.9.8" />
-      <dependency id="ServiceStack.OrmLite" version="4.0" />
+      <dependency id="ServiceStack.OrmLite" version="4.1.52" />
     </dependencies> 
   </metadata> 
-  <files>
-    <file src="lib\**\*.*" target="lib" />
-    <file src="..\..\src\ServiceStack.OrmLite.MySql\**\*.cs" target="src\ServiceStack.OrmLite.MySql" />
-  </files>
 </package>
