--- a/NuGet/ServiceStack.OrmLite.SqlServer/servicestack.ormlite.sqlserver.nuspec
+++ b/NuGet/ServiceStack.OrmLite.SqlServer/servicestack.ormlite.sqlserver.nuspec
@@ -12,17 +12,13 @@
 	</description> 
     <projectUrl>https://github.com/ServiceStack/ServiceStack.OrmLite</projectUrl>
     <licenseUrl>https://servicestack.net/terms</licenseUrl>
-    <requireLicenseAcceptance>true</requireLicenseAcceptance>
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <iconUrl>https://servicestack.net/img/logo-32.png</iconUrl>
     <tags>SQLServer SQL Server OrmLite POCO Code-First Orm Schema-less Blobs</tags>
     <language>en-US</language> 
     <copyright>Copyright 2015 Service Stack</copyright>
     <dependencies>
-      <dependency id="ServiceStack.OrmLite" version="4.0" />
+      <dependency id="ServiceStack.OrmLite" version="4.1.52" />
     </dependencies> 
   </metadata> 
-  <files>
-    <file src="lib\**\*.*" target="lib" />
-    <file src="..\..\src\ServiceStack.OrmLite.SqlServer\**\*.cs" target="src\ServiceStack.OrmLite.SqlServer" />
-  </files>
 </package>
