--- a/NuGet/ServiceStack.OrmLite/servicestack.ormlite.nuspec
+++ b/NuGet/ServiceStack.OrmLite/servicestack.ormlite.nuspec
@@ -13,17 +13,13 @@
   	</description> 
     <projectUrl>https://github.com/ServiceStack/ServiceStack.OrmLite</projectUrl>
     <licenseUrl>https://servicestack.net/terms</licenseUrl>
-    <requireLicenseAcceptance>true</requireLicenseAcceptance>
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <iconUrl>https://servicestack.net/img/logo-32.png</iconUrl>
     <tags>OrmLite POCO Code-First Orm Schema-less Blobs</tags>
     <language>en-US</language> 
     <copyright>Copyright 2015 Service Stack</copyright>
     <dependencies>
-      <dependency id="ServiceStack.Common" version="4.0" />
+      <dependency id="ServiceStack.Common" version="4.1.52" />
     </dependencies> 
   </metadata> 
-  <files>
-    <file src="lib\**\*.*" target="lib" />
-    <file src="..\..\src\ServiceStack.OrmLite\**\*.cs" target="src\ServiceStack.OrmLite" />
-  </files>
 </package>
